# drop-table-regrets

./: .env.example  Makefile  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 0001_initial_hello.py
src/drop_table_regrets/: __init__.py  cli.py  db.py  example.py  run.py
src/drop_table_regrets/repos/: hello.py
tests/: test_cli.py  test_example.py  test_hello_repo.py  test_init.py  test_run.py
